log
Thu Apr 21 11:27:43 HSP 2022: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|8
total_score: 0/70
2a8093f
Thu Apr 21 11:28:36 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 10/70
90e7cb4
Thu Apr 21 11:40:09 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:47:16: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode * aux = tree->root;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
836494d
Thu Apr 21 11:40:24 HSP 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|7
total_score: 10/70
9ba97b7
Thu Apr 21 11:42:36 HSP 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|6
total_score: 10/70
d2ffa0d
Sun Apr 24 18:46:02 HSP 2022: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:15: error: unused variable 'aux' [-Werror=unused-variable]
     TreeMap * aux = (TreeMap *) calloc(1,sizeof(TreeMap));
               ^~~
treemap.c: In function 'insertTreeMap':
treemap.c:48:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeMap * aux = tree->root;
                     ^~~~
treemap.c:48:15: error: unused variable 'aux' [-Werror=unused-variable]
     TreeMap * aux = tree->root;
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
3834849
Sun Apr 24 18:49:05 HSP 2022: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:50:21: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeMap * aux = tree->root;
                     ^~~~
treemap.c:50:15: error: unused variable 'aux' [-Werror=unused-variable]
     TreeMap * aux = tree->root;
               ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
f6faae3
Sun Apr 24 18:49:37 HSP 2022: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  13|5
total_score: 15/70
697cdb4
Sun Apr 24 19:10:16 HSP 2022: 
 treemap.c | 22 +++++++++++++++++-----
 1 file changed, 17 insertions(+), 5 deletions(-)
 tests:  13|5
total_score: 15/70
5771d51
Sun Apr 24 19:19:19 HSP 2022: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  15|4
total_score: 20/70
13a7715
Sun Apr 24 19:22:05 HSP 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:115:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (minimum(aux->right));
                ~^~~~~~~~~~~~~~~~~~~~
treemap.c:122:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return aux2;
            ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a472bc5
Sun Apr 24 19:22:20 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:115:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (minimum(aux->right));
                ~^~~~~~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8a823b8
Sun Apr 24 19:23:07 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:115:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (minimum(aux));
                ~^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d62a660
Sun Apr 24 19:29:28 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:115:25: error: passing argument 1 of 'minimum' from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (minimum(aux));
                         ^~~
treemap.c:56:12: note: expected 'TreeNode * {aka struct TreeNode *}' but argument is of type 'TreeMap * {aka struct TreeMap *}'
 TreeNode * minimum(TreeNode * x){
            ^~~~~~~
treemap.c:115:17: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
         return (minimum(aux));
                ~^~~~~~~~~~~~~
treemap.c:119:13: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         aux = aux2;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
58277c9
Sun Apr 24 20:04:05 HSP 2022: 
 treemap.c | 33 ++++++++++++++++++++-------------
 1 file changed, 20 insertions(+), 13 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:127:16: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode * aux = tree->current;
                ^~~
test.c: In function 'insertTreeMap':
treemap.c:51:11: error: 'z' is used uninitialized in this function [-Werror=uninitialized]
     z->key=key;
     ~~~~~~^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
bd9a018
Sun Apr 24 20:04:48 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:127:16: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode * aux = tree->current;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
54df091
Sun Apr 24 20:05:15 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
361af79
Sun Apr 24 20:19:02 HSP 2022: 
 treemap.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
 tests:  17|4
total_score: 25/70
4851905
Sun Apr 24 20:21:33 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  17|4
total_score: 25/70
4321f18
Sun Apr 24 21:35:02 HSP 2022: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
e9be09a
Sun Apr 24 21:35:40 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3687e66
Sun Apr 24 21:43:04 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
acbe648
Sun Apr 24 22:05:00 HSP 2022: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 25/70
8e14bcc
